CDR-2305 WIP templates